# sbg_ros_driver

./: .gitattributes  .gitignore  CHANGELOG.rst  CMakeLists.txt  README.md  package.xml  releasePackage.md  sbg_ellipse.launch
config/: ellipse_A_default.yaml  ellipse_E_default.yaml  ellipse_default.yaml  sbg_device_uart_default.yaml  sbg_device_udp_default.yaml
config/example/: ellipse_A_default.yaml  ellipse_D_default.yaml  ellipse_E_default.yaml  ellipse_N_default.yaml
include/: config_output.h  config_store.h  ellipse.h  ellipse_msg.h  message_publisher.h  message_wrapper.h  sbg_device.h
include/sbg_driver/: SbgDriver.h  config_applier.h  config_output.h  config_store.h  ellipse.h  message_publisher.h  message_subscriber.h  message_wrapper.h  sbg_device.h  sbg_matrix3.h  sbg_ros_helpers.h  sbg_utm.h  sbg_vector3.h
launch/: calibration_sbg_ellipse.launch  sbg_device.launch  sbg_ellipse.launch  sbg_ellipseA.launch  sbg_ellipseE.launch  sbg_file.launch
launch/examples/: sbg_ellipseD.launch  sbg_ellipseN.launch
msg/: SbgEkfEuler.msg  SbgEkfNav.msg  SbgEkfQuat.msg  SbgEkfStatus.msg  SbgEvent.msg  SbgGpsHdt.msg  SbgGpsPos.msg  SbgGpsVel.msg  SbgImuData.msg  SbgImuShort.msg  SbgMag.msg  SbgOdoVel.msg  SbgPressure.msg  SbgShipMotion.msg  SbgStatus.msg  SbgUtcTime.msg
sbgECom/: CMakeLists.txt
sbgECom/common/: sbgCommon.h  sbgCommonLibVersion.h  sbgDebug.h  sbgDefines.h  sbgErrorCodes.h  sbgTypes.h
sbgECom/common/crc/: sbgCrc.c  sbgCrc.h
sbgECom/common/interfaces/: sbgInterface.c  sbgInterface.h  sbgInterfaceFile.c  sbgInterfaceFile.h  sbgInterfaceSerial.h  sbgInterfaceSerialUnix.c  sbgInterfaceSerialWin.c  sbgInterfaceUdp.c  sbgInterfaceUdp.h
sbgECom/common/network/: sbgNetwork.c  sbgNetwork.h
sbgECom/common/platform/: sbgConfig.h  sbgPlatform.c  sbgPlatform.h
sbgECom/common/splitBuffer/: sbgSplitBuffer.c  sbgSplitBuffer.h
sbgECom/common/streamBuffer/: sbgStreamBuffer.c  sbgStreamBuffer.h  sbgStreamBufferBE.h  sbgStreamBufferCommon.h  sbgStreamBufferLE.h
sbgECom/common/swap/: sbgSwap.c  sbgSwap.h
sbgECom/common/version/: sbgVersion.c  sbgVersion.h
sbgECom/src/: sbgECanId.h  sbgECom.c  sbgECom.h  sbgEComIds.h  sbgEComLib.h  sbgEComVersion.h
sbgECom/src/binaryLogs/: sbgEComBinaryLogDebug.c  sbgEComBinaryLogDebug.h  sbgEComBinaryLogDvl.c  sbgEComBinaryLogDvl.h  sbgEComBinaryLogEkf.c  sbgEComBinaryLogEkf.h  sbgEComBinaryLogEvent.c  sbgEComBinaryLogEvent.h  sbgEComBinaryLogGps.c  sbgEComBinaryLogGps.h  sbgEComBinaryLogImu.c  sbgEComBinaryLogImu.h  sbgEComBinaryLogImuRaw.c  sbgEComBinaryLogImuRaw.h  sbgEComBinaryLogMag.c  sbgEComBinaryLogMag.h  sbgEComBinaryLogOdometer.c  sbgEComBinaryLogOdometer.h  sbgEComBinaryLogPressure.c  sbgEComBinaryLogPressure.h  sbgEComBinaryLogShipMotion.c  sbgEComBinaryLogShipMotion.h  sbgEComBinaryLogStatus.c  sbgEComBinaryLogStatus.h  sbgEComBinaryLogUsbl.c  sbgEComBinaryLogUsbl.h  sbgEComBinaryLogUtc.c  sbgEComBinaryLogUtc.h  sbgEComBinaryLogs.c  sbgEComBinaryLogs.h
sbgECom/src/commands/: sbgEComCmd.c  sbgEComCmd.h  sbgEComCmdAdvanced.c  sbgEComCmdAdvanced.h  sbgEComCmdCommon.c  sbgEComCmdCommon.h  sbgEComCmdEthernet.c  sbgEComCmdEthernet.h  sbgEComCmdEvent.c  sbgEComCmdEvent.h  sbgEComCmdFeatures.c  sbgEComCmdFeatures.h  sbgEComCmdGnss.c  sbgEComCmdGnss.h  sbgEComCmdInfo.c  sbgEComCmdInfo.h  sbgEComCmdInterface.c  sbgEComCmdInterface.h  sbgEComCmdLicense.c  sbgEComCmdLicense.h  sbgEComCmdMag.c  sbgEComCmdMag.h  sbgEComCmdOdo.c  sbgEComCmdOdo.h  sbgEComCmdOutput.c  sbgEComCmdOutput.h  sbgEComCmdSensor.c  sbgEComCmdSensor.h  sbgEComCmdSettings.c  sbgEComCmdSettings.h
sbgECom/src/commands/transfer/: sbgEComTransfer.c  sbgEComTransfer.h
sbgECom/src/protocol/: sbgEComProtocol.c  sbgEComProtocol.h
src/: SbgDriver.cpp  config_applier.cpp  config_output.cpp  config_store.cpp  ellipse.cpp  ellipse.h  ellipse_mag.cpp  ellipse_msg.cpp  ellipse_msg.h  main.cpp  main_mag.cpp  message_publisher.cpp  message_subscriber.cpp  message_wrapper.cpp  sbg_device.cpp  sbg_ros_helpers.cpp  sbg_utm.cpp
