<?xml version="1.0"?>
<package>
  <name>sbg_driver</name>
  <version>3.1.1</version>
  <description>
    ROS driver package for communication with the SBG navigation systems.
  </description>
  <author>SBG Systems</author>
  <maintainer email="support@sbg-systems.com">SBG Systems</maintainer>
  <license>MIT</license>

  <url type="website">http://wiki.ros.org/sbg_driver</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>tf2_msgs</build_depend>
  <build_depend>tf2_geometry_msgs</build_depend>
  
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>std_srvs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>tf2_ros</run_depend>
  <run_depend>tf2_msgs</run_depend>
  <run_depend>tf2_geometry_msgs</run_depend>
  
</package>
